fixed blog title spacing

--- a/src/index.css
+++ b/src/index.css
@@ -235,7 +235,7 @@ canvas {
 
 .comments-wrapper  input { margin: 1em; }
 
-#blog-title { margin: 2em 8em; }
+#blog-title { margin: 1em 3em; }
 #blog-body {
     margin: 3em 8em;
     text-align: center;
